# ellcc

./: CMakeLists.txt  ChangeLog  Doxyfile  ECC.xmind  ELLCC.xmind  Makefile  a.ll  a.obc  a.obc.s  a.out  addGA  array.cc  class.cc  configure  data.cc  documentation.html  friend.cc  func.cc  hello.c  index.html  int.c  int.cc  int.i  int.ii  license.txt  loop.cc  main.cc  main.dox  main.s  makeweb  mergebinutils  mergegdb  mergellvm  mergemusl  mergeqemu  name.cc  news.html  oper.cc  over.cc  param.cc  (+14 more)
basic/: Builtins.cpp  Builtins.def  Builtins.h  CMakeLists.txt  ConvertUTF.c  Diagnostic.cpp  Diagnostic.h  Diagnostic.td  DiagnosticBuffer.cpp  DiagnosticBuffer.h  DiagnosticCommonKinds.td  DiagnosticEllccKinds.td  DiagnosticElsaKinds.td  FileManager.cpp  FileManager.h  IdentifierTable.cpp  IdentifierTable.h  LangOptions.cpp  LangOptions.h  Makefile  Makefile.in  MipsBuiltins.def  OnDiskHashTable.h  PrettyStackTrace.h  SourceLocation.cpp  SourceLocation.h  SourceManager.cpp  SourceManager.h  TargetBuiltins.h  TargetInfo.cpp  TargetInfo.h  Targets.cpp  TokenKinds.cpp  TokenKinds.def  TokenKinds.h  Version.h
gnu/src/libgui/: Makefile.am  Makefile.in  configure
libecc/: CMakeLists.txt  Makefile  config.musl  include
libecc/arm/include/: sysdep.h
libecc/common/soft-int/: tconfig.h
libecc/doc/: index.html
libecc/doc/ecc/: index.html
libecc/doc/libecc/: index.html
libecc/include/: alloca.h  argz.h  assert.h  config.h  ctype.h  dirent.h  envz.h  errno.h  fastmath.h  float.h  getopt.h  grp.h  iconv.h  ieeefp.h  inttypes.h  langinfo.h  libgen.h  limits.h  locale.h  malloc.h  math.h  process.h  pthread.h  pwd.h  reent.h  sched.h  search.h  setjmp.h  sha1.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h  unwind.h  (+4 more)
libecc/include.old/: assert.h  complex.h  config.h  ctype.h  dirent.h  envz.h  fastmath.h  float.h  ieeefp.h  inttypes.h  langinfo.h  limits.h  locale.h  malloc.h  process.h  pwd.h  reent.h  sched.h  search.h  setjmp.h  stdlib.h  string.h  syscall.h  termios.h  time.h  typeclass.h  utmp.h  wchar.h
libecc/include.old/c++/: exception  typeinfo
libecc/include.old/machine/: setjmp.h
libecc/include.old/sys/: _default_fcntl.h  _types.h  errno.h  iconvnls.h  mman.h  reent.h  stat.h  syscall.h  times.h
libecc/include.old/unix/: sysdep.h
libecc/include.old/x86_64/: sysdep.h
libecc/include/alpha-elf/: sysdep.h
libecc/include/arm/: float.h
libecc/include/arm-elf/: sysdep.h
libecc/include/c++/: exception
libecc/include/i386/: sysdep.h
libecc/include/linux/: signal.h  time.h
libecc/include/machine/: ieeefp.h
libecc/include/sparc-elf/: sysdep.h
libecc/include/sys/: _default_fcntl.h  bswap.h  cdefs_aout.h  config.h  errno.h  mman.h  rbtree.h  reent.h  signal.h  stat.h  syscall.h  termios.h  time.h  timeb.h  times.h  types.h  unistd.h
libecc/include/sys.old/: fcntl.h  time.h
libecc/include/unix/: sysdep.h
libecc/include/x86-elf/: sysdep.h
libecc/include/x86_64-elf/: sysdep.h
libecc/ldscripts/sa/: elf32elmip.x
libecc/lib/: program.ld
libecc/lib/include/: stddef.h
libecc/libc/: config  doit
libecc/libc/argz/: argz_add.c  argz_add_sep.c  argz_append.c  argz_create_sep.c  argz_extract.c  argz_stringify.c
libecc/libc/ctype/: isdigit.c  isprint.c  ispunct.c  iswcntrl.c  iswdigit.c  iswgraph.c  iswupper.c  iswxdigit.c  toascii.c  toupper.c  towupper.c  wctrans.c
libecc/libc/include/: _ansi.h  argz.h  envz.h  ieeefp.h  pthread.h  stdint.h  stdlib.h  unctrl.h
libecc/libc/locale/: locale.c  nl_langinfo.c
libecc/libc/misc/: __dprintf.c  ffs.c
libecc/libc/posix/: creat.c  isatty.c  popen.c
libecc/libc/reent/: fcntlr.c  impure.c  reent.c  signalr.c  statr.c  unlinkr.c
libecc/libc/search/: tdelete.c  tdestroy.c  tsearch.c
libecc/libc/stdio/: asprintf.c  dprintf.c  feof.c  fflush.c  fileno.c  fiprintf.c  fread.c  fvwrite.h  fwrite.c  getc.c  gets.c  iprintf.c  local.h  makebuf.c  putc.c  putc_u.c  putchar.c  refill.c  rename.c  rget.c  siprintf.c  sprintf.c  sscanf.c  ungetc.c  vasprintf.c  vfprintf.c  vfscanf.c  viprintf.c  viscanf.c  vprintf.c  vsniprintf.c  vsnprintf.c  vsprintf.c
libecc/libc/stdio64/: ftello64.c  tmpfile64.c
libecc/libc/stdlib/: __exp10.c  __ten_mu.c  atof.c  cxa_atexit.c  div.c  drand48.c  envlock.h  erand48.c  gdtoa-hexnan.c  getopt.c  getsubopt.c  jrand48.c  local.h  malign.c  malloc.c  mbctype.h  mblen.c  mbsrtowcs.c  mbstowcs.c  mbtowc_r.c  mlock.c  mprec.c  mrand48.c  nrand48.c  on_exit.c  putenv_r.c  rand.c  strtoll_r.c  strtoul.c  strtoull.c  strtoull_r.c  system.c  wcrtomb.c  wcsrtombs.c  wcstoll.c  wcstombs.c  wctob.c  wctomb.c
libecc/libc/string/: memchr.c  memmem.c  memset.c  rindex.c  stpcpy.c  strchr.c  strlwr.c  strtok_r.c  strxfrm.c  wcpcpy.c  wcscat.c  wcscmp.c  wcscpy.c  wcslcat.c  wcsncmp.c  wcsncpy.c  wcsnlen.c  wcsrchr.c  wcsspn.c  wcsxfrm.c  wcwidth.c  wmemchr.c
libecc/libc/syscalls/: sysfork.c  sysgettod.c  syskill.c  syslseek.c  sysread.c  sysstat.c  syswait.c
libecc/libc/time/: asctime.c  ctime.c  difftime.c  gettzinfo.c  gmtime.c  local.h  mktm_r.c  tzset.c  tzset_r.c
libecc/linker/alpha-elf/: target.ld
libecc/linux/: _exit.bc
libecc/mkscripts/: common.mk  lib.mk  os.mk  prog.mk  progs.mk
libecc/soft-fp/: doit  sfp-machine.h  testit.c
libecc/soft-int/: libgcc2.c  libgcc2.h  targetcalls.h  tconfig.h
libecc/source/: CMakeLists.txt
libecc/src/: common.mk  lib.mk  os.mk
libecc/src/rt/: sem.c  (+1 more)
libecc/stdio64/: freopen64.c  fseeko64.c  fsetpos64.c  local.h
libecc/unix/: pread.c  ttyname.c
libecc/usrinclude/: assert.h  c++  ecc_test.h  errno.h  fenv.h  inttypes.h  limits.h  locale.h  math.h  pthread.h  pwd.h  signal.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h  util.h  utime.h  wchar.h
smbase/: CMakeLists.txt  Makefile.in  bflatten.cc  bitarray.h  bitwise_array.h  configure.pl  exc.h  macros.h  run-flex.pl  smregexp.cc  srcloc.cc  srcloc.h  srcloc.test.cc  str.cpp  strdict.cc  strobjdict.h  strtable.h  strtokp.cpp  svdict.cc  svdict.h  syserr.cpp  tobjpool.cc  trace.cc  trace.h  xassert.h  xstrobjdict.h
(+3066 files in other folders)
